contact .html and .css completed

--- a/index.html
+++ b/index.html
@@ -29,10 +29,16 @@
                 <li><a  href="/">about</a>  </li>
                 <li><a href="/">services</a></li>
                 <li><a href="/">projects</a></li>
-                <li><a href="/">contact me</a></li>
+                <li><a href="contact.html">contact me</a></li>
             </ul>
         </div>
         
+
+
+
+
+
+
       </nav>
     </header>
     <main>
