--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="right">
             <ul>
                 <li><a href="/">home  </a></li>
-                <li><a  href="/">about</a>  </li>
+                <li><a  href="about.html">about</a>  </li>
                 <li><a href="/">services</a></li>
                 <li><a href="/">projects</a></li>
                 <li><a href="contact.html">contact me</a></li>
