left div added span and added css too

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header>
       <nav>
     
-        <div class="left">Saumya's Portfolio</div>
+        <div class="left"><span>S</span>aumya <span>N</span>eupane</div>
         <div class="right">
             <ul>
                 <li><a href="/">home  </a></li>
